--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -550,16 +550,16 @@
     "## Conclusion\n",
     "\n",
     "This side-by-side comparison demonstrates how the quality and specificity of a prompt directly influence the depth, utility, and strategic value of an LLM's output:\n",
-    "* **Bad Prompt:** Minimal data and vague instructions yield only superficial insights—no clear direction or actionable strategies.\n",
-    "* **Better Prompt:** Adding pricing details and specific tasks (like calculating revenue or ranking products) results in more concrete analysis and targeted recommendations.\n",
-    "* **Best Prompt:** Providing comprehensive context—including profit margins, demographics, inventory challenges, and explicit formatting instructions—empowers the model to deliver nuanced, highly actionable advice aligned with real business needs.\n",
+    "* **Bad prompt:** Minimal data and vague instructions yield only superficial insights—no clear direction or actionable strategies.\n",
+    "* **Better prompt:** Adding pricing details and specific tasks (like calculating revenue or ranking products) results in more concrete analysis and targeted recommendations.\n",
+    "* **Best prompt:** Providing comprehensive context—including profit margins, demographics, inventory challenges, and explicit formatting instructions—empowers the model to deliver nuanced, highly actionable advice aligned with real business needs.\n",
     "\n",
     "Key Takeaways for Effective Prompt Engineering\n",
-    "* **Provide Relevant Context:** Include all essential data (pricing, margins, customer segments) to enable deeper analysis.\n",
-    "* **Specify Instructions Clearly:** Outline the tasks, format, and reasoning style (e.g., step-by-step) you want the model to follow.\n",
-    "* **Articulate Business Constraints & Goals:** Highlight challenges (e.g., excess inventory, limited budget) to guide strategic recommendations.\n",
-    "* **Structure the Output Requirements:** Break down the response into clear, logical sections (analysis, recommendations, marketing, etc.).\n",
-    "* **Iterate for Best Results:** Incrementally refining prompts yields exponentially better outcomes—invest time upfront for far greater business value.\n",
+    "* **Provide relevant context:** Include all essential data (pricing, margins, customer segments) to enable deeper analysis.\n",
+    "* **Specify instructions clearly:** Outline the tasks, format, and reasoning style (e.g., step-by-step) you want the model to follow.\n",
+    "* **Articulate business constraints and goals:** Highlight challenges (e.g., excess inventory, limited budget) to guide strategic recommendations.\n",
+    "* **Structure the output requirements:** Break down the response into clear, logical sections (analysis, recommendations, marketing, etc.).\n",
+    "* **Iterate for best results:** Incrementally refining prompts yields exponentially better outcomes—invest time upfront for far greater business value.\n",
     "\n",
     "By enriching prompts with thorough details and well-defined objectives, you unlock the full potential of LLMs to generate accurate, context-aware, and immediately applicable insights."
    ]
