--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -25,7 +25,7 @@
    "id": "b26c7677",
    "metadata": {},
    "source": [
-    "In this notebook, we'll showcase how prompt engineering can dramatically improve the quality of responses from LLMs. Effective prompt design often makes the difference between vague, generic outputs and precise, actionable business intelligence.\n",
+    "Prompt engineering is the practice of crafting inputs to guide large language models (LLMs) toward desired responses, and can dramatically improve the quality of results.  Effective prompt design helps shape how the model interprets and responds to a query, often making the difference between vague, generic outputs and precise, actionable responses.\n",
     "\n",
     "In this notebook, we demonstrate the dramatic impact of prompt quality on LLM performance by comparing three increasingly sophisticated prompts, namely _Bad_, _Better_, and _Best_, applied to a retail sales analysis scenario. You'll see firsthand how adding structure, context, and specific business parameters transforms model outputs from basic observations into comprehensive strategic recommendations.\n",
     "\n",
