--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -58,18 +58,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "install-deps",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -q openai tqdm"
    ]
@@ -519,36 +511,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f4009270-6cf0-4b19-98b0-ae262d1b626e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Advanced: Demonstrating Parallel Uploads\n",
-    "\n",
-    "print(\"\\n\\n## PARALLEL UPLOAD DEMONSTRATION ##\\n\")\n",
-    "\n",
-    "# First, create a new upload object for our parallel demo\n",
-    "print(\"Creating a new upload for parallel demonstration...\")\n",
-    "parallel_upload = create_upload(client, file_to_upload, file_size)\n",
-    "\n",
-    "# Now use the parallel upload function instead of the sequential one\n",
-    "print(\"\\nUploading parts in parallel...\")\n",
-    "parallel_parts = parallel_upload_parts(client, parallel_upload.id, file_to_upload, num_parts=2, max_workers=2)\n",
-    "\n",
-    "# Complete the parallel upload\n",
-    "print(\"\\nCompleting the parallel upload...\")\n",
-    "parallel_completed_upload = complete_upload(client, parallel_upload.id, parallel_parts)\n",
-    "\n",
-    "print(\"\\nParallel upload demonstration completed!\")\n",
-    "print(f\"Parallel uploaded file ID: {parallel_completed_upload.file.id}\")\n",
-    "\n",
-    "# We won't use this file for further processing, it was just for demonstration\n",
-    "print(\"Note: This file was uploaded just for demonstration purposes.\")\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "cancel-upload-heading",
    "metadata": {},
@@ -586,15 +548,11 @@
     "\n",
     "Here are some best practices and tips for using the Kluster.ai Uploads API effectively:\n",
     "\n",
-    "1. **Optimal Part Size**: Choose an appropriate part size based on your network conditions. While the API allows parts up to 64 MB, you might want to use smaller parts if your network is unstable.\n",
-    "\n",
-    "2. **Parallel Uploads**: For very large files, consider uploading parts in parallel to speed up the process.\n",
-    "\n",
-    "3. **Error Handling**: Implement proper error handling and retries for failed part uploads.\n",
-    "\n",
-    "4. **Upload Expiration**: Remember that uploads expire after an hour, so make sure to complete the upload within that time frame.\n",
-    "\n",
-    "5. **Cleanup**: Always clean up temporary files created during the upload process."
+    "- **Optimal part size** - choose an appropriate part size based on your network conditions. While the API allows parts up to 64 MB, you might want to use smaller parts if your network is unstable\n",
+    "- **Parallel uploads** - for very large files, consider uploading parts in parallel to speed up the process\n",
+    "- **Error handling** - implement proper error handling and retries for failed part uploads\n",
+    "- **Upload expiration** - remember that uploads expire after an hour, so make sure to complete the upload within that time frame\n",
+    "- **Cleanup** - always clean up temporary files created during the upload process"
    ]
   },
   {
@@ -622,7 +580,9 @@
    "source": [
     "## Advanced: Implementing Parallel Uploads\n",
     "\n",
-    "For very large files, uploading parts sequentially might take a long time. Let's implement a version that uploads parts in parallel using Python's `concurrent.futures` module."
+    "For very large files, uploading parts sequentially might take a long time. You can implement a version that uploads parts in parallel using Python's `concurrent.futures` module. This approach creates a thread pool that allows multiple parts to be uploaded simultaneously, significantly reducing the total upload time for large files over high-bandwidth connections.\n",
+    "\n",
+    "The implementation uses the `ThreadPoolExecutor` to manage a pool of worker threads that process uploads concurrently. Each chunk is written to a temporary file, uploaded to the server, and then the temporary file is cleaned up. The code carefully tracks each part's original position to ensure they're properly ordered when completing the upload, regardless of which part finishes uploading first."
    ]
   },
   {
@@ -695,6 +655,36 @@
     "    \n",
     "# To use parallel uploads, replace the call to split_and_upload_parts with:\n",
     "# parts = parallel_upload_parts(client, upload.id, file_to_upload, num_parts=2, max_workers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4009270-6cf0-4b19-98b0-ae262d1b626e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Advanced: Demonstrating Parallel Uploads\n",
+    "\n",
+    "print(\"\\n\\n## PARALLEL UPLOAD DEMONSTRATION ##\\n\")\n",
+    "\n",
+    "# First, create a new upload object for our parallel demo\n",
+    "print(\"Creating a new upload for parallel demonstration...\")\n",
+    "parallel_upload = create_upload(client, file_to_upload, file_size)\n",
+    "\n",
+    "# Now use the parallel upload function instead of the sequential one\n",
+    "print(\"\\nUploading parts in parallel...\")\n",
+    "parallel_parts = parallel_upload_parts(client, parallel_upload.id, file_to_upload, num_parts=2, max_workers=2)\n",
+    "\n",
+    "# Complete the parallel upload\n",
+    "print(\"\\nCompleting the parallel upload...\")\n",
+    "parallel_completed_upload = complete_upload(client, parallel_upload.id, parallel_parts)\n",
+    "\n",
+    "print(\"\\nParallel upload demonstration completed!\")\n",
+    "print(f\"Parallel uploaded file ID: {parallel_completed_upload.file.id}\")\n",
+    "\n",
+    "# We won't use this file for further processing, it was just for demonstration\n",
+    "print(\"Note: This file was uploaded just for demonstration purposes.\")\n"
    ]
   }
  ],
