--- a/tutorials/klusterai-api/keyword-extraction-api.ipynb
+++ b/tutorials/klusterai-api/keyword-extraction-api.ipynb
@@ -70,7 +70,7 @@
       "metadata": {},
       "outputs": [
         {
-          "name": "stdin",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Enter your kluster.ai API key:  ········\n"
@@ -232,7 +232,7 @@
         "id": "qS4JXT52wGJ-"
       },
       "source": [
-        "This example selects the `klusterai/Meta-Llama-3.1-405B-Instruct-Turbo` model. If you'd like to use a different model, feel free to change it by modifying the `model` field. In this notebook, you can also comment Llama 3.1 405B, and uncomment whatever model you want to try out.\n",
+        "This example selects the `klusterai/Meta-Llama-3.3-70B-Instruct-Turbo` model. If you'd like to use a different model, feel free to change it by modifying the `model` field.\n",
         "\n",
         "Please refer to the <a href=\"/get-started/models/\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
         "\n",
@@ -253,10 +253,9 @@
         "\n",
         "# Models\n",
         "#model=\"deepseek-ai/DeepSeek-R1\"\n",
-        "#model=\"deepseek-ai/DeepSeek-V3\"\n",
+        "#model=\"deepseek-ai/DeepSeek-V3-0324\"\n",
         "#model=\"klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\"\n",
-        "model=\"klusterai/Meta-Llama-3.1-405B-Instruct-Turbo\"\n",
-        "#model=\"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\"\n",
+        "model=\"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\"\n",
         "#model=\"Qwen/Qwen2.5-VL-7B-Instruct\"\n",
         "\n",
         "# Ensure the directory exists\n",
