--- a/tutorials/klusterai-api/llm-as-a-judge.ipynb
+++ b/tutorials/klusterai-api/llm-as-a-judge.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "In our previous <a href= \"https://github.com/kluster-ai/klusterai-cookbook/blob/main/examples/model-comparison.ipynb\" target=\"_blank\">notebook</a>, we explored the idea of selecting the best model to perform a classification task. We did that by calculating the accuracy of each model based on a ground truth label. In real-life applications, though, the ground truth is not always available, and to create one, we might depend on human annotation, which is time-consuming and costly. \n",
     "\n",
-    "In this notebook, we will use the `Llama-3.1-8B-Instruct-Turbo` model to classify the genre of movies from the IMDb Top 1000 dataset based on their descriptions. To evaluate the accuracy of these predictions, we will use the `Llama-3.1-405B-Instruct-Turbo` model as a judge tasked with determining whether the base model's answers are correct. Since the dataset includes the true genres as ground truth, we can also assess how well the judge model aligns with the actual answers provided in the dataset."
+    "In this notebook, we will use the `Llama-3.1-8B-Instruct-Turbo` model to classify the genre of movies from the IMDb Top 1000 dataset based on their descriptions. To evaluate the accuracy of these predictions, we will use the `klusterai/Meta-Llama-3.3-70B-Instruct-Turbo` model as a judge tasked with determining whether the base model's answers are correct. Since the dataset includes the true genres as ground truth, we can also assess how well the judge model aligns with the actual answers provided in the dataset."
    ]
   },
   {
@@ -591,7 +591,7 @@
     "task_list = create_tasks(user_contents=prompt_dict[\"USER_CONTENTS\"], \n",
     "                         system_prompt=prompt_dict[\"JUDGE_PROMPT\"], \n",
     "                         task_type='judge', \n",
-    "                         model=\"klusterai/Meta-Llama-3.1-405B-Instruct-Turbo\")\n",
+    "                         model=\"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\")\n",
     "filename = save_tasks(task_list, task_type='judge')\n",
     "job = create_batch_job(filename)\n",
     "monitor_job_status(client=client, job_id=job.id, task_type='judge')\n",
