--- a/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
+++ b/tutorials/klusterai-api/multiple-tasks-batch-api.ipynb
@@ -417,7 +417,7 @@
         "id": "qS4JXT52wGJ-"
       },
       "source": [
-        "This example uses the `deepseek-ai/DeepSeek-V3` model. If you'd like to use a different model, feel free to change it by modifying the `model` field. In this notebook, you can also comment DeepSeek V3, and uncomment whatever model you want to try out.\n",
+        "This example uses the `deepseek-ai/DeepSeek-V3-0324` model. If you'd like to use a different model, feel free to change it by modifying the `model` field. \n",
         "\n",
         "Please refer to the <a href=\"/get-started/models/#model-comparison-table\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
         "\n",
@@ -433,9 +433,8 @@
       "source": [
         "# Models\n",
         "# model=\"deepseek-ai/DeepSeek-R1\"\n",
-        "model = \"deepseek-ai/DeepSeek-V3\"\n",
+        "model = \"deepseek-ai/DeepSeek-V3-0324\"\n",
         "# model=\"klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\"\n",
-        "# model=\"klusterai/Meta-Llama-3.1-405B-Instruct-Turbo\"\n",
         "# model=\"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\"\n",
         "# model=\"Qwen/Qwen2.5-VL-7B-Instruct\"\n",
         "\n",
