--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -288,7 +288,7 @@
     "\n",
     "Key strengths of this Best prompt:\n",
     "\n",
-    "- **Complete data & metrics** - monthly sales, pricing, and profit margins remove guesswork and allow precise revenue/profit calculations\n",
+    "- **Complete data and metrics** - monthly sales, pricing, and profit margins remove guesswork and allow precise revenue/profit calculations\n",
     "- **Focused business context** - target customer demographics, marketing channels, and product nuances (e.g., overstock of Product C) align the output with real business priorities\n",
     "- **Clear task breakdown** - dividing the request into distinct sections (Revenue/Profit Analysis, Profitability Recommendations, Marketing Strategies) ensures the response is both methodical and thorough\n",
     "- **Actionability & specificity** - the prompt requests concrete next steps—such as pricing tweaks and promotional ideas—tailored to each product's characteristics and customer segment\n",
