--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -291,7 +291,7 @@
     "- **Complete data and metrics** - monthly sales, pricing, and profit margins remove guesswork and allow precise revenue/profit calculations\n",
     "- **Focused business context** - target customer demographics, marketing channels, and product nuances (e.g., overstock of Product C) align the output with real business priorities\n",
     "- **Clear task breakdown** - dividing the request into distinct sections (Revenue/Profit Analysis, Profitability Recommendations, Marketing Strategies) ensures the response is both methodical and thorough\n",
-    "- **Actionability & specificity** - the prompt requests concrete next steps—such as pricing tweaks and promotional ideas—tailored to each product's characteristics and customer segment\n",
+    "- **Actionability and specificity** - the prompt requests concrete next steps—such as pricing tweaks and promotional ideas—tailored to each product's characteristics and customer segment\n",
     "- **Logical reasoning instructions** - guiding the LLM to \"think step-by-step\" fosters more thoughtful planning, especially around clearing excess inventory and leveraging different marketing channels\n",
     "\n",
     "Overall, this approach maximizes the LLM's potential, yielding responses that are precise, context-aware, and immediately useful to decision-makers."
