display full length responses in notebook

--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -47,10 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2f254b80",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter your kluster.ai API key:  ········\n"
+     ]
+    }
+   ],
    "source": [
     "# Import required packages at the beginning of the notebook\n",
     "from getpass import getpass\n",
@@ -76,10 +84,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e88b3960",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model response:\n",
+      "**Data Overview**\n",
+      "\n",
+      "The provided data appears to be a simple sales report for four products: A, B, C, and D. Here's a breakdown of the information:\n",
+      "\n",
+      "### Sales Data\n",
+      "\n",
+      "| Product | Sales |\n",
+      "|---------|-------|\n",
+      "| A       | 10    |\n",
+      "| B       | 20    |\n",
+      "| C       | 5     |\n",
+      "| D       | 15    |\n",
+      "\n",
+      "### Key Observations\n",
+      "\n",
+      "* **Total Sales**: The total sales across all products is 10 + 20 + 5 + 15 = 50.\n",
+      "* **Product with Highest Sales**: Product B has the highest sales with 20 units sold.\n",
+      "* **Product with Lowest Sales**: Product C has the lowest sales with 5 units sold.\n",
+      "* **Product Sales Ranking**:\n",
+      "\t1. B (20)\n",
+      "\t2. D (15)\n",
+      "\t3. A (10)\n",
+      "\t4. C (5)\n",
+      "\n",
+      "### Insights\n",
+      "\n",
+      "* The sales distribution is not uniform, with Product B dominating the sales.\n",
+      "* Product C has the lowest sales, indicating it may require additional attention or strategies to boost its sales.\n",
+      "\n",
+      "If you'd like to explore this data further or perform specific analyses, please let me know!\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the bad prompt\n",
     "bad_prompt_text = \"\"\"Here's some data:\n",
@@ -130,10 +177,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d1c3d4c4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model response:\n",
+      "## Monthly Sales Revenue and Performance Analysis\n",
+      "\n",
+      "### 1. Total Monthly Revenue for Each Product\n",
+      "\n",
+      "To calculate the total monthly revenue for each product, we multiply the units sold by the price per unit.\n",
+      "\n",
+      "| Product | Units Sold | Price per Unit | Total Revenue |\n",
+      "|---------|-----------|----------------|------------------|\n",
+      "| A       | 10        | $5.00         | $50.00          |\n",
+      "| B       | 20        | $3.50         | $70.00             |\n",
+      "| C       | 5          | $8.00         | $40.00             |\n",
+      "| D       | 15        | $6.00         | $90.00             |\n",
+      "\n",
+      "### 2. Best and Worst-Performing Products by Revenue\n",
+      "\n",
+      "- **Best-Performing Product:** Product B with a total revenue of $70.00\n",
+      "- **Worst-Performing Product:** Product C with a total revenue of $40.00\n",
+      "\n",
+      "### 3. Strategies to Boost Overall Sales\n",
+      "\n",
+      "#### For Product C (Worst-Performing):\n",
+      "- **Increase Visibility and Marketing:** Given that Product C has the lowest sales volume and revenue, consider increasing its visibility through targeted marketing campaigns or social media promotions. Highlighting its unique features or benefits could attract more customers.\n",
+      "- **Competitive Pricing Analysis:** Conduct a competitive pricing analysis to ensure that Product C's price point is attractive compared to similar products in the market. If it's priced significantly higher than similar products, consider adjusting the price or offering promotions to make it more appealing.\n",
+      "\n",
+      "#### For Product A:\n",
+      "- **Bundle Deals:** Create bundle deals that include Product A and other best-selling products. This could encourage customers to purchase more and increase overall revenue.\n",
+      "- **Promotional Offers:** Offer limited-time discounts or promotions on Product A to stimulate sales and attract price-sensitive customers.\n",
+      "\n",
+      "#### For Product D:\n",
+      "- While Product D is performing reasonably well, consider enhancing its marketing and promotional efforts to increase its visibility and appeal. This could involve highlighting customer testimonials, creating engaging content, or offering loyalty rewards.\n",
+      "\n",
+      "### 4. Recommendations for Adjusting Pricing or Marketing\n",
+      "\n",
+      "#### Pricing Strategy:\n",
+      "- **Product C:** Given its low sales volume, consider a price adjustment or a promotional offer to make it more competitive. A limited-time discount or a \"buy one get one free\" deal could stimulate sales.\n",
+      "- **Product A:** Since it's selling reasonably well, focus on maintaining or slightly increasing its price point while ensuring that any discounts or promotions are targeted and strategic.\n",
+      "\n",
+      "#### Marketing Strategy:\n",
+      "- **Product C:** Focus on highlighting the unique value proposition of Product C through storytelling and emphasizing its quality or exclusivity. This could help justify its higher price point and attract a niche audience willing to pay a premium.\n",
+      "- **Product A and D:** For these products, emphasize their quality and value proposition. Consider loyalty programs or rewards for frequent customers to maintain and build on their current success.\n",
+      "\n",
+      "#### Actionable Steps:\n",
+      "1. **Conduct Market Research:** Understand what competitors are offering and how customers perceive your products. This could help in identifying areas for improvement or opportunities for differentiation.\n",
+      "2. **Targeted Promotions:** Use targeted promotions for Product C to attract more customers. This could involve social media ads, influencer partnerships, or special events.\n",
+      "3. **Product Placement and Display:** Ensure that all products, especially lower-performing ones, are prominently displayed in-store and online. This could increase their visibility and appeal to potential customers.\n",
+      "4. **Customer Feedback:** Gather feedback from customers on why they prefer certain products over others. This could provide insights into what they value and help in adjusting marketing strategies accordingly.\n",
+      "\n",
+      "By implementing these strategies, you can potentially boost sales of lower-performing products and maintain or grow the sales of your best-performing items.\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the better prompt\n",
     "better_prompt_text = \"\"\"Here's monthly sales data from our store (units sold) for four products during January 2025:\n",
@@ -200,12 +304,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cb27726c",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model response:\n",
+      "## **1. Revenue and Profit Analysis**\n",
+      "\n",
+      "### **Revenue Calculation:**\n",
+      "\n",
+      "* **Product A:** 10 units \\* $5.00 = $50\n",
+      "* **Product B:** 20 units \\* $3.50 = $70\n",
+      "* **Product C:** 5 units \\* $8.00 = $40\n",
+      "* **Product D:** 15 units \\* $6.00 = $90\n",
+      "\n",
+      "### **Total Revenue:** \n",
+      "* $50 + $70 + $40 + $90 = **$250**\n",
+      "\n",
+      "### **Profit Margin Calculation:**\n",
+      "\n",
+      "* **Product A:** 30% of $50 = $15\n",
+      "* **Product B:** 40% of $70 = $28\n",
+      "* **Product C:** 25% of $40 = $10\n",
+      "* **Product D:** 35% of $90 = $31.50\n",
+      "\n",
+      "### **Total Monthly Revenue and Profit:**\n",
+      "\n",
+      "| Product | Units Sold | Price per Unit | Total Revenue | Total Profit |\n",
+      "|---------|------------|----------------|------------------|-----------------|\n",
+      "| A       | 10         | $5.00          | $50             | $15             |\n",
+      "| B       | 20         | $3.50          | $70             | $28                |\n",
+      "| C       | 5          | $8.00          | $40             | $10                |\n",
+      "| D       | 15         | $6.00          | $90             | $31.50             |\n",
+      "\n",
+      "### **Revenue and Profit Analysis:**\n",
+      "\n",
+      "* **Revenue:** \n",
+      " * **Product A:** $50\n",
+      " * **Product B:** $70\n",
+      " * **Product C:** $40\n",
+      " * **Product D:** $90\n",
+      "\n",
+      "* **Profit:** \n",
+      " * **Product A:** $15\n",
+      " * **Product B:** $28\n",
+      " * **Product C:** $10\n",
+      " * **Product D:** $31.50\n",
+      "\n",
+      "### **Product Performance Ranking:**\n",
+      "\n",
+      "* **Best Performing (Profitability):** Product D ($31.50 profit)\n",
+      "* **Worst Performing (Profitability):** Product C ($10 profit)\n",
+      "\n",
+      "## **2. Profitability Optimization Recommendations**\n",
+      "\n",
+      "### **Immediate Action for Excess Inventory (Product C):**\n",
+      "\n",
+      "* **Reduce Price:** Offer a **limited-time discount** (10-15% off) on Product C to clear excess inventory quickly. This will help reduce overstocked items and generate cash flow.\n",
+      "* **Bundle Product C with Promotions:** Create a bundle deal where customers can purchase Product C at a discounted price when bought with another popular product (e.g., Product D). This will incentivize sales and help manage inventory levels.\n",
+      "\n",
+      "### **Pricing Adjustments and Promotional Strategies:**\n",
+      "\n",
+      "* **Product C (Premium):** \n",
+      " * Offer a **\"Buy One, Get One Free\"** deal on Product C to incentivize sales and reduce inventory quickly.\n",
+      " * **Reasoning:** \n",
+      " * Product C has a high price but low demand. A BOGO deal will attract customers and help clear out excess stock.\n",
+      "\n",
+      "* **Product B (Frequent Purchases):** \n",
+      " * Implement a **\"Buy 2, Get 1 Free\"** promotion for Product B, targeting young adults who frequently purchase it.\n",
+      " * **Reasoning:** \n",
+      " * Product B has high demand and is popular with young adults. A BOGO deal will encourage more purchases and drive sales volume.\n",
+      "\n",
+      "## **3. Marketing Optimization Recommendations**\n",
+      "\n",
+      "### **Targeted Marketing Strategies:**\n",
+      "\n",
+      "* **Instagram Ads:** \n",
+      " * **Product D:** Prioritize ads for Product D, as it is a mid-range product with growing popularity. Focus on visually appealing content that highlights its benefits.\n",
+      " * **Product A:** Run targeted ads for Product A, emphasizing its everyday consumable nature and value.\n",
+      "\n",
+      "* **Email Newsletters:** \n",
+      " * **Product B:** Offer exclusive promotions to frequent buyers who have shown interest in Product B.\n",
+      " * **Product D:** Highlight its benefits and value proposition to attract more customers.\n",
+      "\n",
+      "* **Weekend Promotions:** \n",
+      " * **Product B:** Offer a \"buy one get one free\" deal on Product B during weekends to attract young adults looking for deals.\n",
+      " * **Product A:** Create a \"buy now, save later\" promotion, encouraging customers to stock up on everyday essentials.\n",
+      "\n",
+      "### **Demographic-Specific Recommendations:**\n",
+      "\n",
+      "* **Product A:** \n",
+      " * **Target Audience:** Young adults and professionals.\n",
+      " * **Strategy:** Highlight its everyday use and value in email newsletters and weekend promotions.\n",
+      "\n",
+      "* **Product B:** \n",
+      " * **Target Audience:** Young adults.\n",
+      " * **Strategy:** Offer a \"buy 2, get 1 free\" deal on weekends to boost sales.\n",
+      "\n",
+      "* **Product C:** \n",
+      " * **Target Audience:** Middle-aged professionals.\n",
+      " * **Strategy:** Run targeted ads on Product C, emphasizing its premium nature and value.\n",
+      "\n",
+      "* **Product D:** \n",
+      " * **Target Audience:** Young adults and professionals.\n",
+      " * **Strategy:** Highlight its mid-range pricing and benefits in Instagram ads and email newsletters.\n",
+      "\n",
+      "## **Additional Recommendations:**\n",
+      "\n",
+      "* **Product C:** \n",
+      " * Offer a **\"buy one, get one free\"** deal on Product C to incentivize purchases and reduce inventory quickly.\n",
+      "\n",
+      "* **Product D:** \n",
+      " * **Target Audience:** Young adults and professionals.\n",
+      " * **Strategy:** Highlight its mid-range pricing and benefits in Instagram ads and email newsletters.\n",
+      "\n",
+      "### **Summary of Recommendations:**\n",
+      "\n",
+      "* **Product A:** Focus on email newsletters and weekend promotions.\n",
+      "* **Product B:** Continue weekend promotions and emphasize its value proposition.\n",
+      "* **Product C:** Offer a discount or bundle deal to clear inventory quickly.\n",
+      "* **Product D:** Utilize Instagram ads and email newsletters to promote its benefits and drive sales.\n",
+      "\n",
+      "### **Detailed Analysis:**\n",
+      "\n",
+      "* **Product A:** \n",
+      " * **Revenue:** $50\n",
+      " * **Profit:** $15\n",
+      " * **Strategy:** Focus on everyday consumption and value.\n",
+      "\n",
+      "* **Product B:** \n",
+      " * **Revenue:** $70\n",
+      " * **Profit:** $28\n",
+      " * **Strategy:** Emphasize frequent purchases and value for money.\n",
+      "\n",
+      "* **Product C:** \n",
+      " * **Revenue:** $40\n",
+      " * **Profit:** $10\n",
+      " * **Strategy:** Clear inventory quickly with targeted promotions.\n",
+      "\n",
+      "* **Product D:** \n",
+      " * **Revenue:** $90\n",
+      " * **Profit:** $31.50\n",
+      " * **Strategy:** Highlight its growing popularity and mid-range pricing.\n",
+      "\n",
+      "## **Conclusion:**\n",
+      "\n",
+      "By implementing these strategies, the store can effectively manage inventory, increase profitability, and align with customer preferences and demographics.\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the best prompt\n",
     "best_prompt_text = \"\"\"Here's monthly sales data (units sold) from our small retail store for four products during January 2025:\n",
@@ -328,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "76875a10-6d4c-4304-86b7-94b50964299c",
    "metadata": {
     "scrolled": true
