--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -5,7 +5,7 @@
    "id": "intro-heading",
    "metadata": {},
    "source": [
-    "# Large File Uploads with Kluster.ai API\n",
+    "# Large file uploads with kluster.ai API\n",
     "\n",
     "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/examples/uploads-api.ipynb)"
    ]
