--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -15,7 +15,7 @@
    "id": "intro-description",
    "metadata": {},
    "source": [
-    "When working with large datasets for AI model training or batch inference, you may need to upload files several gigabytes in size. For these scenarios, Kluster.ai provides a multipart upload API that allows you to split your large files into smaller chunks and upload them efficiently.\n",
+    "When working with large datasets for AI model training or batch inference, you may need to upload files several gigabytes in size. For these scenarios, [kluster.ai](https://www.kluster.ai/){target=\_blank} provides a multipart upload API that allows you to split your large files into smaller chunks and upload them efficiently.\n",
     "\n",
     "This tutorial demonstrates how to:\n",
     "1. Split a large file into multiple parts\n",
