--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "This tutorial demonstrates how to:\n",
     "1. Split a large file into multiple parts\n",
-    "2. Upload each part using the Kluster.ai Uploads API\n",
+    "2. Upload each part using the kluster.ai uploads API\n",
     "3. Complete the upload process to create a usable File object\n",
     "4. Use the uploaded file for a batch inference job\n",
     "\n",
