--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -20,7 +20,7 @@
     "This tutorial demonstrates how to:\n",
     "1. Split a large file into multiple parts\n",
     "2. Upload each part using the kluster.ai uploads API\n",
-    "3. Complete the upload process to create a usable File object\n",
+    "3. Complete the upload process to create a usable [File object](/api-reference/reference/#file-object){target=\blank}\n",
     "4. Use the uploaded file for a batch inference job\n",
     "\n",
     "The example uses a large JSONL file for batch inference with a language model, but this approach can be adapted for any large file upload scenario."
