--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -5,7 +5,7 @@
    "id": "intro-heading",
    "metadata": {},
    "source": [
-    "# Large file uploads with kluster.ai API\n",
+    "# Large File Uploads with Kluster.ai API\n",
     "\n",
     "[![Open in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/kluster-ai/klusterai-cookbook/blob/main/examples/uploads-api.ipynb)"
    ]
@@ -15,12 +15,12 @@
    "id": "intro-description",
    "metadata": {},
    "source": [
-    "When working with large datasets for AI model training or batch inference, you may need to upload files several gigabytes in size. For these scenarios, [kluster.ai](https://www.kluster.ai/){target=\_blank} provides a multipart upload API that allows you to split your large files into smaller chunks and upload them efficiently.\n",
+    "When working with large datasets for AI model training or batch inference, you may need to upload files several gigabytes in size. For these scenarios, Kluster.ai provides a multipart upload API that allows you to split your large files into smaller chunks and upload them efficiently.\n",
     "\n",
     "This tutorial demonstrates how to:\n",
     "1. Split a large file into multiple parts\n",
-    "2. Upload each part using the kluster.ai uploads API\n",
-    "3. Complete the upload process to create a usable [File object](/api-reference/reference/#file-object){target=\blank}\n",
+    "2. Upload each part using the Kluster.ai Uploads API\n",
+    "3. Complete the upload process to create a usable File object\n",
     "4. Use the uploaded file for a batch inference job\n",
     "\n",
     "The example uses a large JSONL file for batch inference with a language model, but this approach can be adapted for any large file upload scenario."
@@ -35,9 +35,8 @@
     "\n",
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A Kluster.ai account** - sign up on the [Kluster.ai platform](https://platform.kluster.ai/signup) if you don't have one\n",
-    "- **A Kluster.ai API key** - after signing in, go to the [**API Keys**](https://platform.kluster.ai/apikeys) section and create a new key\n",
-    "- **A large JSONL file** - for this tutorial, we'll assume you have a large JSONL file that you want to upload"
+    "- **A kluster.ai account** - sign up on the [Kluster.ai platform](https://platform.kluster.ai/signup) if you don't have one\n",
+    "- **A kluster.ai API key** - after signing in, go to the [**API Keys**](https://platform.kluster.ai/apikeys) section and create a new key"
    ]
   },
   {
